syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xxx.commondatamodel.grpc";
option java_outer_classname = "UserProto";

service User {
    rpc queryPage (GrpcReq) returns (GrpcResp) {}
}

message GrpcReq {
    string params = 1;
}

message GrpcResp {
    string data = 1;
}
